--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,52 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes moveUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.move-up {
+  animation: moveUp 0.5s ease-in forwards;
+}
+
+.move-up-delay-1 {
+  animation: moveUp 0.5s ease-in forwards;
+  animation-delay: 0.1s;
+}
+
+.move-up-delay-2 {
+  animation: moveUp 0.5s ease-in forwards;
+  animation-delay: 0.1s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-in forwards;
+  animation-delay: 0.5s;
+}
+
+.fade-in-delay-1 {
+  animation: fadeIn 2s ease-in forwards;
+  animation-delay: 1s;
+}
+
+.fade-in-delay-2 {
+  animation: fadeIn 2s ease-in forwards;
+  animation-delay: 2s;
+}
