--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,3 +113,24 @@
     @apply text-xl text-white;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px; /* adjust as needed */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black; /* change this to the color you want */
+  border-radius: 9999px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: gray; /* change this to the color you want */
+}
+
+.scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  @apply rounded-md;
+}
