--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,12 +137,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: black; /* change this to the color you want */
+  background-color: gray; /* change this to the color you want */
   border-radius: 9999px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: gray; /* change this to the color you want */
+  background-color: transparent; /* change this to the color you want */
 }
 
 .scrollbar::-webkit-scrollbar {
